--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,15 @@
     "description": "A simple chrome extension",
     "version": "1.0",
     "manifest_version": 3,
+    "permissions": [
+        "storage",
+        "activeTab"
+    ],
     "action": {
         "default_popup": "popup/popup.html",
         "default_icon": "images/icon.png"
+    },
+    "background": {
+        "service_worker": "scripts/background.js"
     }
 }
