--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     ],
     "action": {
         "default_popup": "popup/popup.html",
-        "default_icon": "images/icon.png"
+        "default_icon": "images/icon48.png"
     },
     "background": {
         "service_worker": "scripts/background.js"
